--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,9 @@
+@import "site";
 body {
     background: #fff;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+h1,
+h2 {
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
